--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
     "gs": "^0.0.2",
+    "js-cookie": "^3.0.1",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
@@ -46,6 +48,6 @@
     ]
   },
   "devDependencies": {
-    "prettier": "2.5.1"
+    "prettier": "^2.5.1"
   }
 }
