--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "redux": "^4.1.2",
     "redux-actions": "^2.6.5",
     "styled-components": "^5.3.3",
-    "tailwindcss": "^3.0.22",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
@@ -55,6 +54,7 @@
     ]
   },
   "devDependencies": {
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "tailwindcss": "^3.0.23"
   }
 }
