--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.2",
     "axios": "^0.24.0",
+    "daisyui": "^2.6.0",
     "flowbite": "^1.3.4",
     "headlessui": "^0.0.0",
     "heroicons": "^1.0.5",
@@ -29,6 +30,7 @@
     "redux": "^4.1.2",
     "redux-actions": "^2.6.5",
     "styled-components": "^5.3.3",
+    "tw-elements": "^1.0.0-alpha11",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
