--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.3.1",
     "prettier": "^2.5.1",
     "tailwindcss": "^3.0.23"
   }
