--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -28,7 +28,7 @@ jobs:
         run: npm install
 
       - name: Start Build with npm
-        run: npm run bhild
+        run: npm run build
         env:
           CI: false
 
